--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "djgadd/themosis-cache",
+  "name": "keltiecochrane/themosis-cache",
   "description": "A themosis plugin that implements the illuminate/cache packing with a WP_Object_Cache driver",
   "keywords": ["themosis", "plugin"],
   "authors": [
