--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,15 @@
   "require": {
     "php": ">=7.0",
     "composer/installers": "~1.2",
-    "illuminate/cache": "^5.4"
+    "illuminate/cache": "^5.4",
+    "keltiecochrane/illuminate": "^1.0",
   },
   "autoload": {
     "psr-4": {
       "KeltieCochrane\\Cache\\": "./src/"
-    }
+    },
+    "files": [
+      "./src/helpers.php"
+    ]
   }
 }
