--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "djgadd/themosis-cache",
   "description": "The illuminate/cache package for Themosis backed by WP_Object_Cache.",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-or-later",
   "keywords": ["themosis", "plugin"],
   "authors": [
     {
